--- a/nuxt/assets/styles/_typography.scss
+++ b/nuxt/assets/styles/_typography.scss
@@ -1,5 +1,7 @@
+@use "sass:math";
+
 @function strip-unit($value) {
-  @return calc($value / $value * 0 + 1);
+  @return math.div($value, $value * 0 + 1);
 }
 
 @mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
@@ -13,7 +15,7 @@
       font-size: $min-font-size;
 
       @media screen and (min-width: $min-vw) {
-        font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
+        font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}) );
       }
 
       @media screen and (min-width: $max-vw) {
@@ -24,7 +26,7 @@
 }
 
 $min: 320px;
-$max: 1440px;
+$max: 1680px;
 
 body {
   @include fluid-type($min, $max, 14px, 18px);
