--- a/nuxt/assets/styles/_fonts.scss
+++ b/nuxt/assets/styles/_fonts.scss
@@ -18,3 +18,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "omelet-hand";
+  src: url("/fonts/Omelet-Hand.otf")  format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
