--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -1,3 +1,7 @@
+:root {
+  --scrollbar-width: 0px;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -11,4 +15,95 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+// --------------------------------------------
+// Pages
+// --------------------------------------------
+
+.page {
+  &.space-t {
+    &:before {
+      content: '';
+      height: 60px;
+      display: flex;
+    }
+  }
+}
+
+// --------------------------------------------
+// Links
+// --------------------------------------------
+
+a {
+  color: inherit;
+  text-decoration: none;
+  outline: 0;
+}
+
+.underline {
+  text-decoration: underline;
+  text-decoration-color: inherit;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  cursor: pointer;
+}
+
+// --------------------------------------------
+// Gutters
+// --------------------------------------------
+
+.gutter {
+  margin-left: 10px;
+  margin-right: 10px;
+
+  @include respond-to($tablet) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  @include respond-to($large-tablet) {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+}
+
+// --------------------------------------------
+// Paddings
+// --------------------------------------------
+
+.pad-all {
+  padding: 10px;
+
+  @include respond-to($tablet) {
+    padding: 20px;
+  }
+
+  @include respond-to($large-tablet) {
+    padding: 30px;
+  }
+}
+
+.pad-t {
+  padding-top: 10px;
+
+  @include respond-to($tablet) {
+    padding-top: 20px;
+  }
+
+  @include respond-to($large-tablet) {
+    padding-top: 30px;
+  }
+}
+
+.pad-b {
+  padding-bottom: 10px;
+
+  @include respond-to($tablet) {
+    padding-bottom: 20px;
+  }
+
+  @include respond-to($large-tablet) {
+    padding-bottom: 30px;
+  }
 }
