wip: site settings, footer

--- a/nuxt/assets/styles/_mixins.scss
+++ b/nuxt/assets/styles/_mixins.scss
@@ -29,7 +29,7 @@
 @mixin omelet-logo($fill) {
   background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 720 140" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M304.22,2.164v135.672h-42.349v-67.644l-22.455,67.644h-28.065l-22.526-67.644v67.644h-42.541V2.164h52.123l27.324,81.441L252.29,2.164h51.93ZM357.198,36.082v16.672h42.158v32.001h-42.158v19.163h47.906v33.918h-90.447V2.164h90.447v33.918h-47.906ZM456.73,105.643h41.008v32.193h-83.549V2.164h42.541v103.478ZM548.8,36.082v16.672h42.158v32.001h-42.158v19.163h47.906v33.918h-90.448V2.164h90.448v33.918h-47.906ZM720,2.164v33.726h-36.026v101.945h-42.541V35.89h-35.643V2.164h114.21ZM69.791.209C31.247.209,0,31.455,0,70s31.247,69.791,69.791,69.791,69.791-31.247,69.791-69.791S108.336.209,69.791.209ZM69.791,97.831c-15.371,0-27.831-12.46-27.831-27.831s12.46-27.831,27.831-27.831,27.831,12.46,27.831,27.831-12.46,27.831-27.831,27.831Z"/></svg>');
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: 0% 50%;
   background-size: contain;
 }
 
@@ -42,6 +42,20 @@
 
 @mixin icon-accessibility($fill) {
   background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M9,0C4.04,0,0,4.04,0,9s4.04,9,9,9,9-4.04,9-9S13.96,0,9,0ZM9,17.04C4.57,17.04.96,13.43.96,9S4.57.96,9,.96s8.04,3.61,8.04,8.04-3.61,8.04-8.04,8.04ZM9,6.07c.87,0,1.58-.71,1.58-1.58s-.71-1.58-1.58-1.58-1.58.71-1.58,1.58.71,1.58,1.58,1.58ZM13.76,6.97c-.08-.56-.53-.98-1.05-.98-.04,0-.09,0-.13,0l-2.78.39h-1.61l-2.78-.39s-.09,0-.13,0c-.52,0-.97.42-1.05.99-.09.62.3,1.19.87,1.26l2.42.34v1.22l-1.53,3.69c-.12.28-.12.59,0,.87.12.28.33.5.61.61.14.06.28.09.43.09.46,0,.87-.27,1.05-.7l.91-2.2.91,2.2c.18.42.59.7,1.05.7.15,0,.29-.03.43-.09.58-.24.85-.9.61-1.48l-1.53-3.69v-1.22l2.42-.34c.29-.04.55-.21.71-.48.14-.23.2-.51.16-.79Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+
+@mixin linkedin($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M6.216,17.589h3.86v-6.474c0-.346.024-.691.127-.939.277-.691.915-1.407,1.981-1.407,1.397,0,1.957,1.061,1.957,2.619v6.201h3.86v-6.644c0-3.558-1.903-5.218-4.444-5.218-2.083,0-2.994,1.163-3.505,1.952h.024v-1.679h-3.86c.049,1.085,0,11.59,0,11.59ZM2.151,4.412c1.343,0,2.186-.891,2.186-2.001-.024-1.139-.837-2.001-2.156-2.001S0,1.278,0,2.412s.837,2.001,2.132,2.001h.024-.005ZM4.079,17.589V5.999H.219v11.59h3.86Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+
+@mixin instagram($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M16.019,14.31c-.166.408-.364.714-.68,1.03-.316.316-.621.515-1.033.678-1.183.469-3.994.367-5.311.367s-4.128.107-5.311-.362c-.412-.163-.717-.362-1.033-.678-.316-.316-.514-.622-.68-1.03-.466-1.189-.364-3.999-.364-5.31s-.107-4.127.364-5.31c.166-.408.364-.714.68-1.03.316-.316.621-.515,1.033-.678,1.183-.469,3.999-.362,5.311-.362s4.128-.107,5.311.362c.412.163.717.362,1.033.678.316.316.514.622.68,1.03.466,1.183.364,3.999.364,5.31s.107,4.127-.364,5.31v-.005ZM17.999,9c0-1.245.011-2.474-.059-3.714-.07-1.444-.396-2.719-1.451-3.775C15.435.455,14.156.129,12.715.057,11.473-.014,10.242.001,9,.001s-2.473-.01-3.715.056c-1.44.071-2.72.398-3.774,1.454C.456,2.567.129,3.843.059,5.286-.01,6.531,0,7.76,0,9s-.011,2.474.059,3.714c.07,1.444.396,2.719,1.451,3.775,1.055,1.056,2.334,1.382,3.774,1.454,1.242.071,2.473.056,3.715.056s2.473.01,3.715-.056c1.44-.071,2.72-.398,3.774-1.454,1.055-1.056,1.381-2.331,1.451-3.775.07-1.24.059-2.474.059-3.714ZM13.808,3.113c-.594,0-1.076.48-1.076,1.076s.482,1.076,1.076,1.076,1.076-.48,1.076-1.076c0-.143-.027-.281-.08-.413-.053-.133-.134-.25-.236-.352-.102-.102-.22-.179-.348-.235-.128-.056-.273-.082-.412-.082v.005ZM9,12c-1.654,0-3.003-1.347-3.003-3s1.349-3,3.003-3,3.003,1.347,3.003,3-1.349,3-3.003,3ZM9,4.378c-2.554,0-4.615,2.061-4.615,4.617s2.061,4.617,4.615,4.617,4.615-2.061,4.615-4.617-2.061-4.617-4.615-4.617Z"/></svg>');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
