--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -17,6 +17,10 @@ body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+.pre {
+  white-space: pre;
+}
+
 // --------------------------------------------
 // Pages
 // --------------------------------------------
@@ -45,7 +49,7 @@ a {
   text-decoration: underline;
   text-decoration-color: inherit;
   text-decoration-thickness: 1px;
-  text-underline-offset: 3px;
+  text-underline-offset: 2px;
   cursor: pointer;
 }
 
