--- a/nuxt/assets/styles/_typography.scss
+++ b/nuxt/assets/styles/_typography.scss
@@ -53,7 +53,7 @@ strong {
 .nav-a2 {
   font-family: $poppins-semi-bold;
   font-size: 10px;
-  line-height: 1.1em;
+  line-height: 1.2em;
   text-transform: uppercase;
 }
 
@@ -125,4 +125,5 @@ h4 {
   @include fluid-type($min, $max, 24px, 40px);
   line-height: 0.8em;
   letter-spacing: -0.01em;
+  text-transform: uppercase;
 }
