--- a/nuxt/assets/styles/_vars.scss
+++ b/nuxt/assets/styles/_vars.scss
@@ -5,6 +5,9 @@
 $white: #ffffff;
 $black: #000000;
 $green: #559b88;
+$gold: #9a9247;
+$orange: #ff5501;
+$purple: #b280c9;
 
 // --------------------------------------------
 // Fonts...
