--- a/nuxt/assets/styles/_mixins.scss
+++ b/nuxt/assets/styles/_mixins.scss
@@ -33,6 +33,13 @@
   background-size: contain;
 }
 
+@mixin arrow($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 34 16" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M33.688,7.247L26.912.47c-.416-.416-1.09-.416-1.506,0-.416.416-.416,1.09,0,1.506l4.959,4.959H1.065c-.588,0-1.065.477-1.065,1.065s.477,1.065,1.065,1.065h29.3l-4.959,4.959c-.416.416-.416,1.09,0,1.506.416.416,1.09.416,1.506,0l6.777-6.777c.416-.416.416-1.09,0-1.506Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+
 @mixin icon-mail($fill) {
   background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 18 18" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M2.05,14.49l5.1-4.71,1.46,1.35c.11.1.25.15.39.15s.28-.05.39-.15l1.46-1.34,5.1,4.71H2.05ZM1.15,4.25l5.15,4.75L1.15,13.75V4.25ZM15.95,3.51l-6.95,6.42L2.05,3.51h13.9ZM16.85,13.75l-5.15-4.75,5.15-4.75v9.51ZM17.98,2.84s-.01-.09-.03-.12c-.02-.04-.04-.08-.07-.11-.02-.02-.02-.05-.04-.07,0,0,0,0,0,0-.03-.04-.08-.06-.12-.08-.02-.01-.04-.03-.07-.05-.03-.01-.06-.02-.09-.02-.04-.01-.08-.03-.13-.03,0,0,0,0-.01,0H.58s0,0-.01,0c-.05,0-.1.02-.15.03-.02,0-.05,0-.07.02-.03.01-.05.03-.08.05-.04.02-.08.05-.11.08,0,0,0,0,0,0-.02.02-.03.05-.04.07-.03.04-.05.07-.07.11-.02.04-.02.08-.03.12,0,.03-.02.05-.02.08v12.14s.01.06.02.08c0,.04.01.09.03.12.02.04.04.08.07.11.02.02.02.05.04.07,0,0,0,0,0,0,.05.05.11.09.17.12,0,0,.01,0,.02.01.07.03.15.05.23.05h16.85c.08,0,.15-.02.23-.05,0,0,.01,0,.02-.01.06-.03.12-.07.17-.12,0,0,0,0,0,0,.02-.02.03-.05.04-.07.03-.04.05-.07.07-.11.01-.04.02-.08.03-.12,0-.03.02-.05.02-.08V2.93s-.01-.06-.02-.08Z"/></svg>');
   background-repeat: no-repeat;
