--- a/nuxt/assets/styles/_typography.scss
+++ b/nuxt/assets/styles/_typography.scss
@@ -62,6 +62,7 @@ strong {
   @include fluid-type($min, $max, 22px, 37px);
   line-height: 1.1em;
   letter-spacing: -0.01em;
+  transform: translateX(-0.03em);
 }
 
 .fs-p2 {
@@ -81,6 +82,10 @@ strong {
   font-family: $poppins-semi-bold;
   @include fluid-type($min, $max, 12px, 14px);
   line-height: 1.1em;
+
+  &.reg {
+    font-family: $poppins;
+  }
 }
 
 .fs-t1 {
@@ -102,6 +107,7 @@ h1 {
   @include fluid-type($min, $max, 10px, 12px);
   line-height: 12px;
   letter-spacing: -0.01em;
+  transform: translateX(-0.05em);
 
   strong {
     font-family: $poppins-semi-bold;
@@ -113,6 +119,7 @@ h2 {
   @include fluid-type($min, $max, 46px, 93px);
   line-height: 0.8em;
   text-transform: uppercase;
+  transform: translateX(-0.05em);
 }
 
 h3 {
@@ -120,6 +127,7 @@ h3 {
   @include fluid-type($min, $max, 36px, 64px);
   line-height: 0.85em;
   text-transform: uppercase;
+  transform: translateX(-0.05em);
 }
 
 h4 {
@@ -128,4 +136,5 @@ h4 {
   line-height: 0.8em;
   letter-spacing: -0.01em;
   text-transform: uppercase;
+  transform: translateX(-0.05em);
 }
