--- a/nuxt/assets/styles/_vars.scss
+++ b/nuxt/assets/styles/_vars.scss
@@ -3,9 +3,10 @@
 // --------------------------------------------
 
 $white: #ffffff;
+$ash: #eeeeee;
 $black: #000000;
-$green: #559b88;
 $gold: #9a9247;
+$green: #559b88;
 $orange: #ff5501;
 $purple: #b280c9;
 
