work hover effect

--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -54,6 +54,38 @@ a {
 }
 
 // --------------------------------------------
+// Background Colors
+// --------------------------------------------
+
+.bg-white {
+  background-color: $white;
+}
+
+.bg-ash {
+  background-color: $ash;
+}
+
+.bg-gold {
+  background-color: $gold;
+}
+
+.bg-green {
+  background-color: $green;
+}
+
+.bg-orange {
+  background-color: $orange;
+}
+
+.bg-purple {
+  background-color: $purple;
+}
+
+.bg-black {
+  background-color: $black;
+}
+
+// --------------------------------------------
 // Gutters
 // --------------------------------------------
 
