work bottom border and ash divider lines

--- a/nuxt/assets/styles/_vars.scss
+++ b/nuxt/assets/styles/_vars.scss
@@ -3,12 +3,12 @@
 // --------------------------------------------
 
 $white: #ffffff;
-$ash: #eeeeee;
-$black: #000000;
 $gold: #9a9247;
 $green: #559b88;
 $orange: #ff5501;
 $purple: #b280c9;
+$black: #000000;
+$ash: rgba($black, 0.1);
 
 // --------------------------------------------
 // Fonts...
