--- a/nuxt/assets/styles/_vars.scss
+++ b/nuxt/assets/styles/_vars.scss
@@ -8,7 +8,7 @@ $green: #559b88;
 $orange: #ff5501;
 $purple: #b280c9;
 $black: #000000;
-$ash: rgba($black, 0.1);
+$ash: #e5e5e5; // equivalent to rgba($black, 0.1)
 
 // --------------------------------------------
 // Fonts...
