builder blocks, schema

--- a/nuxt/assets/styles/_typography.scss
+++ b/nuxt/assets/styles/_typography.scss
@@ -39,6 +39,10 @@ strong,
   font-family: $poppins-semi-bold;
 }
 
+em, i {
+  font-style: italic;
+}
+
 .nav-a1 {
   font-family: $poppins-extra-bold;
   font-size: 13px;
