wip: page transitions, remove nuxt anchorscroll

--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -37,12 +37,13 @@ body {
 
 .page-enter-active,
 .page-leave-active {
-  transition: opacity $speed-666 $ease-out;
+  transition: opacity $speed-666 $ease-out, transform $speed-666 $ease-out;
 }
 
-.page-enter,
-.page-leave-active {
+.page-enter-from,
+.page-leave-to {
   opacity: 0;
+  transform: translateY($header-height);
 }
 
 // --------------------------------------------
