--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -43,7 +43,7 @@ body {
 .page-enter-from,
 .page-leave-to {
   opacity: 0;
-  transform: translateY($header-height);
+  // transform: translateY($header-height);
 }
 
 // --------------------------------------------
