--- a/nuxt/assets/styles/_mixins.scss
+++ b/nuxt/assets/styles/_mixins.scss
@@ -79,3 +79,17 @@
   background-position: 50% 50%;
   background-size: contain;
 }
+
+@mixin registered($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 12 12" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M6,0c3.314,0,6,2.686,6,6s-2.686,6-6,6S0,9.314,0,6,2.686,0,6,0ZM6,1.2C3.349,1.2,1.2,3.349,1.2,6s2.149,4.8,4.8,4.8,4.8-2.149,4.8-4.8S8.651,1.2,6,1.2ZM6.3,3c1.16,0,2.1.94,2.1,2.1,0,.733-.382,1.413-1.008,1.794l1.529,2.106h-1.483l-1.308-1.8h-1.33v1.8h-1.2V3h2.7ZM6.3,4.2h-1.5v1.8h1.5c.464,0,.851-.352.896-.814l.004-.086c0-.497-.403-.9-.9-.9Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
+
+@mixin copyright($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 12 12" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M6,0c3.312,0,6,2.688,6,6s-2.688,6-6,6S0,9.312,0,6,2.688,0,6,0ZM6,1.2C3.348,1.2,1.2,3.348,1.2,6s2.148,4.8,4.8,4.8,4.8-2.148,4.8-4.8S8.652,1.2,6,1.2ZM6,3c1.092,0,2.048.584,2.573,1.457l-1.028.617c-.511-.853-1.617-1.129-2.469-.618-.853.511-1.129,1.617-.618,2.469.325.542.911.874,1.543.874.632,0,1.219-.331,1.544-.874l1.029.617c-.851,1.421-2.693,1.884-4.114,1.033-.906-.542-1.459-1.52-1.459-2.576,0-1.656,1.344-3,3-3Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
