--- a/nuxt/assets/styles/_mixins.scss
+++ b/nuxt/assets/styles/_mixins.scss
@@ -93,3 +93,10 @@
   background-position: 50% 50%;
   background-size: contain;
 }
+
+@mixin plus($fill) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 8 8" xml:space="preserve" fill="#{svgColorMaker($fill)}"><path d="M8,5.333h-2.667v2.667h-2.667v-2.667H0v-2.667h2.667V0h2.667v2.667h2.667v2.667Z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
+}
