--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -21,6 +21,19 @@ body {
   white-space: pre-line;
 }
 
+button {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: none;
+  background: none;
+  appearance: none;
+  text-transform: none;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 // --------------------------------------------
 // Pages
 // --------------------------------------------
