--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -17,6 +17,16 @@ body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
+::selection {
+  background: rgba($orange, 0.5);
+  color: $black;
+}
+
+::-moz-selection {
+  background: rgba($orange, 0.5);
+  color: $black;
+}
+
 .pre {
   white-space: pre-line;
 }
