--- a/nuxt/assets/styles/_main.scss
+++ b/nuxt/assets/styles/_main.scss
@@ -31,6 +31,15 @@ body {
   white-space: pre-line;
 }
 
+.screen-reader {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  font-size: 0px;
+  line-height: 0em;
+}
+
 button {
   margin: 0;
   padding: 0;
